# ansible-devops

./: .gitignore  LICENSE  README.md  ansible.cfg  galaxy.yml  pyproject.toml
playbooks/: bootstrap.yml
playbooks/templates/etc/: hosts.j2
plugins/action/: dns_provider_digital_ocean.py  tls_certificate.py  tls_csr.py  tls_private_key.py
plugins/filter/: nft_filters.py  postfix_filters.py  util_filters.py
plugins/module_utils/: common.py  crypto.py  types.py
roles/common_handlers/handlers/: main.yml
roles/common_handlers/handlers/tasks/: check_reload.yml
roles/docker/files/etc/docker/: daemon.json
roles/docker/handlers/: main.yml
roles/docker/tasks/: main.yml
roles/docker_cli/meta/: main.yml
roles/docker_cli/tasks/: main.yml
roles/docker_compose/meta/: argument_specs.yml  main.yml
roles/docker_compose/tasks/: main.yml
roles/docker_repo/tasks/: main.yml
roles/docker_repo/vars/: main.yml
roles/fail2ban/handlers/: main.yml
roles/fail2ban/tasks/: main.yml
roles/fail2ban/templates/etc/fail2ban/jail.d/: omeganet.conf.j2
roles/nal_repo/tasks/: main.yml
roles/nft/defaults/: main.yml
roles/nft/files/etc/logrotate.d/: firewall
roles/nft/files/etc/rsyslog.d/: 20-firewall.conf
roles/nft/handlers/: main.yml
roles/nft/tasks/: log.yml  main.yml
roles/nft/templates/etc/: nftables.conf.j2
roles/nft/templates/etc/logrotate.d/: firewall.j2
roles/nft/templates/etc/nftables.d/: 001-knock.conf.j2  005-upnp.conf.j2  010-service-rules.conf.j2  020-drop-unknown-forward.conf.j2  999-log.conf.j2
roles/nft/templates/etc/rsyslog.d/: 20-firewall.conf.j2
roles/ntp/handlers/: main.yml
roles/ntp/tasks/: main.yml
roles/podman/meta/: main.yml
roles/podman/tasks/: main.yml
roles/postfix/handlers/: main.yml
roles/postfix/tasks/: main.yml
roles/postfix/templates/etc/: aliases.j2
roles/postfix/templates/etc/postfix/: sasl_passwd.j2
roles/service_user/files/etc/profile.d/: nal-service.sh
roles/service_user/meta/: argument_specs.yml
roles/service_user/tasks/: main.yml
roles/ssh_console/handlers/: main.yml
roles/ssh_console/tasks/: main.yml
roles/ssh_console/vars/: main.yml
roles/sudo/tasks/: main.yml
roles/sudo/templates/etc/sudoers.d/: ansible.j2
roles/tls_cert/defaults/: main.yml
roles/tls_cert/examples/: unifi-cert.yml
roles/tls_cert/meta/: main.yml
roles/tls_cert/tasks/: main.yml
roles/tls_cert/vars/: main.yml
roles/traefik/defaults/: main.yml
roles/traefik/files/: traefik-api.socket  traefik-http.socket  traefik-https.socket
roles/traefik/meta/: argument_specs.yml  main.yml
roles/traefik/tasks/: main.yml
roles/traefik/templates/etc/containers/systemd/: legacy-traefik.network.j2  traefik.container.j2  (+1 more)
roles/traefik/templates/etc/traefik/: traefik.yml.j2
(+1 files in other folders)
