[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
molecule-plugins = {extras = ["docker"], version = "^23.7.0"}
ansible-core = "^2.18.4"
molecule = "^25.4.0"
requests = "^2.32.3"
dnspython = "^2.7.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
netaddr = "^1.3.0"
ruff = "^0.11.13"

[tool.ruff]
src = ["aiounifi", "tests"]
target-version = "py312"

lint.select = [
    "B002",  # Python does not support the unary prefix increment
    "B005",  # Using .strip() with multi-character strings is misleading
    "B007",  # Loop control variable {name} not used within loop body
    "B014",  # Exception handler with duplicate exception
    "B015",  # Pointless comparison. Did you mean to assign a value? Otherwise, prepend assert or remove it.
    "B018",  # Found useless attribute access. Either assign it to a variable or remove it.
    "B023",  # Function definition does not bind loop variable {name}
    "B026",  # Star-arg unpacking after a keyword argument is strongly discouraged
    "B032",  # Possible unintentional type annotation (using :). Did you mean to assign (using =)?
    "C",       # complexity
    "COM818",  # Trailing comma on bare tuple prohibited
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN001",  # import concentions; {name} should be imported as {asname}
    "ISC",     # flake8-implicit-str-concat
    "LOG",     # flake8-logging
    "N804",    # First argument of a class method should be named cls
    "N805",    # First argument of a method should be named self
    "N815",    # Variable {name} in class scope should not be mixedCase
    "PERF",    # A Linter for performance anti-patterns
    "PGH004",  # Use specific rule codes when using noqa
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # pytest
    "RSE",  # flake8-raise
    "RUF005",  # Consider iterable unpacking instead of concatenation
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "RUF100",  # Unused `noqa` directive
    "S307",    # No builtin eval() allowed
    "SIM",   # flake8-simplify
    "T100",  # Trace found: {name} used
    "T20",   # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle
]

lint.ignore = [
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D206",  # Checks for docstrings that are indented with tabs
    "D213",  # Multi-line docstring summary should start at the second line
    "E501",  # Checks for lines that exceed the specified maximum character length
]

